@@ -37,18 +37,18 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'net.coobird:thumbnailator:0.4.18'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-
     implementation 'mysql:mysql-connector-java:8.0.33'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-
-
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+// Cấu hình JVM Args cho BootRun
+tasks.named('bootRun') {
+    jvmArgs = ['--add-exports=jdk.hotspot.agent/images=ALL-UNNAMED']
 }
